add search methods in PersonaRepository and update SpringbootJpaApplication to display results

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # = JPA / HIBERNATE
 # ===============================
 # Database Platform to use
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 # Show or not log for each sql query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
