--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=update
+
+# Para usar variables de entorno
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
